--- a/style.html
+++ b/style.html
@@ -3127,11 +3127,16 @@
                 grid-template-columns: repeat(2, minmax(0, 1fr));
                 gap: 12px;
                 overflow-x: hidden;
-                padding-bottom: 0;
+                padding: 8px 6px 4px;
+                border-radius: 16px;
+                background: color-mix(in srgb, var(--surface-color) 85%, transparent);
             }
             .cards-hero .card {
                 min-width: 0;
                 padding: 12px 10px;
+                border: none;
+                box-shadow: 0 6px 14px rgba(15, 23, 42, 0.06);
+                background: color-mix(in srgb, var(--surface-color) 94%, var(--bg-color) 6%);
             }
             .cards-hero .card-title {
                 font-size: 0.85rem;
@@ -3141,6 +3146,9 @@
             }
             .cards-hero .card-value {
                 font-size: 1.35rem;
+            }
+            .cards-hero .card.em-uso {
+                background: color-mix(in srgb, var(--em-uso-card-bg) 88%, white 12%);
             }
             .table-header-controls button {
                 width: 100%;
