Add print card cloning and reprint access

--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,8 @@
             </div>
         </div>
     </div>
-    </div>
+    <!-- Área dedicada para a impressão do comprovante -->
+    <div id="print-area" aria-hidden="true"></div>
     <div class="avatar-modal-backdrop hidden" id="avatar-modal-backdrop" aria-hidden="true">
         <div class="avatar-modal hidden" id="avatar-modal" role="dialog" aria-modal="true" aria-labelledby="avatar-modal-title">
             <div class="avatar-modal-header">
