Garantir exibição do cartão de impressão

--- a/style.html
+++ b/style.html
@@ -2015,6 +2015,10 @@
                 top: auto;
                 padding: 0;
             }
+            body.modal-print-open #print-area #impressao-reserva-card-print {
+                display: block !important;
+                visibility: visible !important;
+            }
             body.modal-print-open .print-ticket {
                 box-shadow: none;
                 border: 1px solid #000;
