--- a/script.html
+++ b/script.html
@@ -609,6 +609,7 @@
         let loginInicializado = false;
         let eventosInicializados = false;
         const estadoImpressaoReserva = { dados: null };
+        let ultimoTicketImpressao = null;
         function aprimorarSeletoresCabecalho() {
             document.querySelectorAll('.selector-control .selector-input').forEach(select => criarSelectorPersonalizado(select));
         }
@@ -5556,10 +5557,24 @@
             elementos.printArea.appendChild(clone);
             elementos.printArea.setAttribute('aria-hidden', 'false');
         }
+        function obterDadosImpressaoReserva() {
+            if (estadoImpressaoReserva.dados && typeof estadoImpressaoReserva.dados === 'object') {
+                return estadoImpressaoReserva.dados;
+            }
+            if (ultimoTicketImpressao && typeof ultimoTicketImpressao === 'object') {
+                return ultimoTicketImpressao;
+            }
+            return null;
+        }
         function abrirModalImpressaoReserva(dados) {
             if (!elementos.impressaoReservaModal) return;
-            estadoImpressaoReserva.dados = dados || null;
-            preencherModalImpressaoReserva(dados || {});
+            if (!dados || typeof dados !== 'object') {
+                mostrarErro('Não foi possível carregar os dados para impressão. Abra o armário novamente.');
+                return;
+            }
+            estadoImpressaoReserva.dados = { ...dados };
+            ultimoTicketImpressao = { ...dados };
+            preencherModalImpressaoReserva(estadoImpressaoReserva.dados);
             sincronizarAreaImpressaoReserva();
             elementos.impressaoReservaModal.style.display = 'flex';
             elementos.impressaoReservaModal.setAttribute('aria-hidden', 'false');
@@ -5584,8 +5599,14 @@
         }
         function imprimirReservaArmario() {
             if (!elementos.impressaoReservaModal) return;
-            const dados = estadoImpressaoReserva.dados || {};
-            preencherModalImpressaoReserva(dados);
+            const dados = obterDadosImpressaoReserva();
+            if (!dados) {
+                mostrarErro('Nenhum comprovante disponível para impressão. Gere a reserva novamente.');
+                return;
+            }
+            estadoImpressaoReserva.dados = { ...dados };
+            ultimoTicketImpressao = { ...dados };
+            preencherModalImpressaoReserva(estadoImpressaoReserva.dados);
             sincronizarAreaImpressaoReserva();
             if (elementos.printArea) {
                 elementos.printArea.setAttribute('aria-hidden', 'false');
@@ -5597,12 +5618,20 @@
         }
         window.addEventListener('beforeprint', () => {
             if (!elementos.impressaoReservaModal) return;
+            const dados = obterDadosImpressaoReserva();
+            if (!dados) {
+                document.body.classList.remove('modal-print-open');
+                if (elementos.printArea) {
+                    elementos.printArea.innerHTML = '';
+                    elementos.printArea.setAttribute('aria-hidden', 'true');
+                }
+                return;
+            }
+            estadoImpressaoReserva.dados = { ...dados };
             if (!document.body.classList.contains('modal-print-open')) {
                 document.body.classList.add('modal-print-open');
             }
-            if (estadoImpressaoReserva.dados) {
-                preencherModalImpressaoReserva(estadoImpressaoReserva.dados);
-            }
+            preencherModalImpressaoReserva(estadoImpressaoReserva.dados);
             sincronizarAreaImpressaoReserva();
             if (elementos.impressaoReservaModal) {
                 elementos.impressaoReservaModal.style.display = 'flex';
